# kindle-manga

./: main.py  pyproject.toml
src/: app.py  converter.py
tests/: test_converter.py  test_integration.py
