[project]
name = "kindle-manga"
version = "0.1.0"
description = "Convert manga CBZ files to Kindle EPUB, batched under 200MB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kindlecomicconverter",
    "natsort>=8.4.0",
    "packaging>=26.0",
    "textual>=8.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
kindlecomicconverter = { git = "https://github.com/ciromattia/kcc.git" }

[dependency-groups]
dev = [
    "pytest>=8.0",
]
